# CTensortest

./: README.md
TensorCppExample/: CMakeLists.txt  Makefile  TfGlint.cpp  TfGlint.h  glint.cpp  glint2.cpp  main.cpp
TensorCppExample/pythonfile/: model.py
TensorCppExample/pythonfile/model/: liner.pb
